unpackaged/main/default/objects/ERS_Payment_Account__mdt/ERS_Payment_Account__mdt.object-meta.xml
<CustomObject>
    <label>ERS Payment Account</label>
    <pluralLabel>ERS Payment Accounts</pluralLabel>
</CustomObject>