unpackaged/main/default/objects/ERS_Payment_Account__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>929565</fullName>
            </value>
            <value>
                <fullName>929550</fullName>
            </value>
            <value>
                <fullName>929540</fullName>
            </value>
            <value>
                <fullName>950103</fullName>
            </value>
            <value>
                <fullName>950101</fullName>
            </value>
            <value>
                <fullName>909660</fullName>
            </value>
            <value>
                <fullName>929100</fullName>
            </value>
            <value>
                <fullName>928245</fullName>
            </value>
            <value>
                <fullName>196037</fullName>
            </value>
            <value>
                <fullName>182002</fullName>
            </value>
            <value>
                <fullName>929570</fullName>
            </value>
            <value>
                <fullName>929140</fullName>
            </value>
            <value>
                <fullName>929210</fullName>
            </value>
            <value>
                <fullName>334006</fullName>
            </value>
            <value>
                <fullName>196036</fullName>
            </value>
            <value>
                <fullName>929125</fullName>
            </value>
            <value>
                <fullName>337006</fullName>
            </value>
            <value>
                <fullName>950600</fullName>
            </value>
            <value>
                <fullName>929180</fullName>
            </value>
            <value>
                <fullName>338003</fullName>
            </value>
            <value>
                <fullName>929135</fullName>
            </value>
            <value>
                <fullName>929560</fullName>
            </value>
            <value>
                <fullName>929561</fullName>
            </value>
            <value>
                <fullName>886001</fullName>
            </value>
            <value>
                <fullName>929525</fullName>
            </value>
            <value>
                <fullName>916150</fullName>
            </value>
            <value>
                <fullName>929250</fullName>
            </value>
            <value>
                <fullName>929500</fullName>
            </value>
            <value>
                <fullName>929110</fullName>
            </value>
            <value>
                <fullName>929115</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>