unpackaged/main/default/objects/ERS_Payment_Account__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASIC COST</fullName>
            </value>
            <value>
                <fullName>PLUS COST</fullName>
            </value>
            <value>
                <fullName>CAR RENTAL COST</fullName>
            </value>
            <value>
                <fullName>HOME LOCKOUT COST</fullName>
            </value>
            <value>
                <fullName>MOTORCYCLE COST</fullName>
            </value>
            <value>
                <fullName>PREMIER COST</fullName>
            </value>
            <value>
                <fullName>PLUS/RV COST</fullName>
            </value>
            <value>
                <fullName>CUSTOMER APPEASEMENT</fullName>
            </value>
            <value>
                <fullName>FACILITY COMPLAINT</fullName>
            </value>
            <value>
                <fullName>FLEET COMPLAINT</fullName>
            </value>
            <value>
                <fullName>AAR PROGRAMS</fullName>
            </value>
            <value>
                <fullName>BATTERY CUSTOMER APPEASEMENT</fullName>
            </value>
            <value>
                <fullName>BATTERY FACILITY APPEASEMENT</fullName>
            </value>
            <value>
                <fullName>BATTERY FLEET APPEASEMENT</fullName>
            </value>
            <value>
                <fullName>BACKGROUNDCK</fullName>
            </value>
            <value>
                <fullName>BASIC</fullName>
            </value>
            <value>
                <fullName>BATTERY</fullName>
            </value>
            <value>
                <fullName>BATTWITHHOLD</fullName>
            </value>
            <value>
                <fullName>CK/GUARTEE</fullName>
            </value>
            <value>
                <fullName>CUST APPEASE</fullName>
            </value>
            <value>
                <fullName>D3ME</fullName>
            </value>
            <value>
                <fullName>DAMAGE</fullName>
            </value>
            <value>
                <fullName>FUEL SUBSIDY</fullName>
            </value>
            <value>
                <fullName>NTWKLSING AP</fullName>
            </value>
            <value>
                <fullName>NTWKLSING AR</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>OVER DRAWN</fullName>
            </value>
            <value>
                <fullName>OVERCHARGE</fullName>
            </value>
            <value>
                <fullName>PAPER CHECK</fullName>
            </value>
            <value>
                <fullName>PERF PAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>