unpackaged/main/default/objects/ERS_Payment_Account__mdt/fields/Payment_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Category__c</fullName>
    <label>Payment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASIC</fullName>
                <default>true</default>
                <label>BASIC</label>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
            <value>
                <fullName>CARRENT</fullName>
            </value>
            <value>
                <fullName>HOMELOCK</fullName>
            </value>
            <value>
                <fullName>MOTO</fullName>
            </value>
            <value>
                <fullName>PREMIER</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>TMAACG</fullName>
            </value>
            <value>
                <fullName>TMACONTR</fullName>
            </value>
            <value>
                <fullName>TMAFLEET</fullName>
            </value>
            <value>
                <fullName>TMSAAR</fullName>
            </value>
            <value>
                <fullName>TMSBATTA</fullName>
            </value>
            <value>
                <fullName>TMSBATTC</fullName>
            </value>
            <value>
                <fullName>TMSBATTF</fullName>
            </value>
            <value>
                <fullName>BACKGROU 909660   B</fullName>
            </value>
            <value>
                <fullName>BASIC    929100   B</fullName>
            </value>
            <value>
                <fullName>BATTERY  928245   B</fullName>
            </value>
            <value>
                <fullName>BATTWITH 196037 B</fullName>
            </value>
            <value>
                <fullName>CK/GUART 182002 O</fullName>
            </value>
            <value>
                <fullName>CUST APP 950101 B</fullName>
            </value>
            <value>
                <fullName>D3ME 929570 O</fullName>
            </value>
            <value>
                <fullName>DAMAGE 929140 B</fullName>
            </value>
            <value>
                <fullName>FUEL SUB 929210 O</fullName>
            </value>
            <value>
                <fullName>NTWKLSING 334006 B</fullName>
            </value>
            <value>
                <fullName>NTWKLSING 196036 B</fullName>
            </value>
            <value>
                <fullName>OTHER 929125 O</fullName>
            </value>
            <value>
                <fullName>OVER DRA 337006 O</fullName>
            </value>
            <value>
                <fullName>OVERCHAR 929100 B</fullName>
            </value>
            <value>
                <fullName>PAPER CH 950600 B</fullName>
            </value>
            <value>
                <fullName>PERF PAY 929180 B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>