unpackaged/main/default/objects/ERS_Payment_Account__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2C</fullName>
                <default>true</default>
                <label>2C</label>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BO</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>EX</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>HE</fullName>
            </value>
            <value>
                <fullName>HM</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
            <value>
                <fullName>K1</fullName>
            </value>
            <value>
                <fullName>K2</fullName>
            </value>
            <value>
                <fullName>K3</fullName>
            </value>
            <value>
                <fullName>LK</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MO</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>P0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>