unpackaged/main/default/objects/ERS_Payment_Account__mdt/fields/RAP__c.field-meta.xml
<CustomField>
    <fullName>RAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAP</label>
    <type>Checkbox</type>
</CustomField>